--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,7 @@ services:
       APP_DEBUG:
     depends_on:
       - api-gateway
+      - servicebase_python
     networks:
       - makeradmin
 
@@ -98,6 +99,7 @@ services:
       STRIPE_SIGNING_SECRET:
     depends_on:
       - api-gateway
+      - servicebase_python
     networks:
       - makeradmin
 
@@ -116,6 +118,7 @@ services:
       APP_DEBUG:
     depends_on:
       - api-gateway
+      - servicebase_python
     networks:
       - makeradmin
 
