Running coverage output

--- a/multiaccess-program/.travis.yml
+++ b/multiaccess-program/.travis.yml
@@ -13,6 +13,7 @@ jobs:
     - script:
         - make test
       after_script:
+        - make coverage
         - coveralls
     - script:
         - make dist
