--- a/frontend/dev-server-compose.yaml
+++ b/frontend/dev-server-compose.yaml
@@ -2,13 +2,13 @@ version: "2"
 volumes:
   node_modules:
 services:
-  frontend_watch:
-    image: makeradmin/frontend_watch:1.0
+  frontend_dev_server:
+    image: makeradmin/frontend_dev_server:1.0
     build:
       context: .
-      dockerfile: ./WatchDockerfile
+      dockerfile: ./DevServerDockerfile
     ports:
-      - "8009:8009"
+      - "8080:8080"
     volumes:
       - .:/frontend
       - node_modules:/frontend/node_modules
