--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,20 +4,6 @@
   "description": "git clone https://github.com/MakersOfSweden/MakerAdmin-Frontend cd ./MakerAdmin-Frontend/ ./docker/docker_build",
   "main": "webpack.config.js",
   "dependencies": {
-    "backbone-react-component": "^0.10.0",
-    "backbone": "^1.3.3",
-    "backbone.paginator": "^2.0.5",
-    "history": "^2.1.2",
-    "jquery": "^3.1.1",
-    "react-dom": "^15.4.1",
-    "react": "^15.4.1",
-    "react-router": "^3.0.0",
-    "react-select": "^1.0.0-rc.2",
-    "uikit": "^2.27.2",
-    "underscore": "^1.8.3",
-    "classnames": "^2.2.5"
-  },
-  "devDependencies": {
     "babel-core": "^6.9.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-es2015-classes": "^6.18.0",
@@ -26,12 +12,24 @@
     "babel-plugin-transform-regenerator": "^6.16.1",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "backbone-react-component": "^0.10.0",
+    "backbone": "^1.3.3",
+    "backbone.paginator": "^2.0.5",
+    "history": "^2.1.2",
+    "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.2"
+    "react-dom": "^15.4.1",
+    "react": "^15.4.1",
+    "react-router": "^3.0.0",
+    "react-select": "^1.0.0-rc.2",
+    "uikit": "^2.27.2",
+    "underscore": "^1.8.3",
+    "webpack": "^1.14.0",
+    "classnames": "^2.2.5"
   },
-  "babel": {
-      "presets": ["es2015", "react"]
+  "devDependencies": {
+    "webpack-cli": "^2",
+    "webpack-dev-server": "^1.16.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
