--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,16 +20,18 @@
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
-    "babel-loader": "^6.2.5",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-es2015-classes": "^6.18.0",
     "babel-plugin-transform-es2015-parameters": "^6.17.0",
     "babel-plugin-transform-es2015-shorthand-properties": "^6.18.0",
     "babel-plugin-transform-regenerator": "^6.16.1",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
-    "webpack": "^1.14.0",
-    "webpack-cli": "^2",
-    "webpack-dev-server": "^1.16.5"
+    "eslint": "^5.3.0",
+    "eslint-plugin-react": "^7.10.0",
+    "webpack": "^4",
+    "webpack-cli": "^3.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -43,5 +45,72 @@
   "bugs": {
     "url": "https://github.com/MakersOfSweden/MakerAdmin-Frontend/issues"
   },
-  "homepage": "https://github.com/MakersOfSweden/MakerAdmin-Frontend#readme"
+  "homepage": "https://github.com/MakersOfSweden/MakerAdmin-Frontend#readme",
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "es6": true
+    },
+      "globals": {
+          "require": true,
+          "module": true
+    },
+    "parser": "babel-eslint",
+    "plugins": [
+      "react"
+    ],
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended"
+    ],
+    "parserOptions": {
+      "ecmaVersion": 8,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true,
+        "experimentalObjectRestSpread": true
+      }
+    },
+    "rules": {
+      "strict": "off",
+      "no-unused-vars": [
+        "error",
+        {
+          "varsIgnorePattern": "styles"
+        }
+      ],
+      "no-unsafe-negation": "warn",
+      "array-callback-return": "warn",
+      "eqeqeq": "warn",
+      "no-unused-expressions": "warn",
+      "no-with": "warn",
+      "no-shadow": "warn",
+      "no-undefined": "warn",
+      "no-use-before-define": [
+        "warn",
+        {
+          "functions": false,
+          "classes": false
+        }
+      ],
+      "wrap-iife": "error",
+      "no-var": "error",
+      "no-proto": "error",
+      "no-throw-literal": "error",
+      "no-implicit-globals": "error",
+      "no-global-assign": "error",
+      "no-eval": "error",
+      "no-else-return": "error",
+      "consistent-return": "error",
+      "block-scoped-var": "error",
+      "semi": "error",
+      "react/prop-types": "off"
+    }
+  }
 }
