--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "eslint": "^5.3.0",
     "eslint-plugin-react": "^7.10.0",
     "webpack": "^4",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -57,9 +58,9 @@
       "browser": true,
       "es6": true
     },
-      "globals": {
-          "require": true,
-          "module": true
+    "globals": {
+      "require": true,
+      "module": true
     },
     "parser": "babel-eslint",
     "plugins": [
