--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "babel-plugin-transform-es2015-parameters": "^6.17.0",
     "babel-plugin-transform-es2015-shorthand-properties": "^6.18.0",
     "babel-plugin-transform-regenerator": "^6.16.1",
-    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.11.1",
     "eslint": "^5.3.0",
     "eslint-plugin-react": "^7.10.0",
@@ -35,6 +35,7 @@
     "webpack-dev-server": "^3.1.5"
   },
   "scripts": {
+    "start": "./node_modules/.bin/webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -42,14 +43,14 @@
     "url": "git+https://github.com/MakersOfSweden/MakerAdmin-Frontend.git"
   },
   "author": "",
-  "license": "GPLv3",
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/MakersOfSweden/MakerAdmin-Frontend/issues"
   },
   "homepage": "https://github.com/MakersOfSweden/MakerAdmin-Frontend#readme",
   "babel": {
     "presets": [
-      "es2015",
+      "env",
       "react"
     ]
   },
