--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,19 +4,19 @@
   "description": "git clone https://github.com/MakersOfSweden/MakerAdmin-Frontend cd ./MakerAdmin-Frontend/ ./docker/docker_build",
   "main": "webpack.config.js",
   "dependencies": {
-    "backbone-react-component": "^0.10.0",
     "backbone": "^1.3.3",
+    "backbone-react-component": "^1.0.0",
     "backbone.paginator": "^2.0.5",
+    "classnames": "^2.2.5",
     "history": "^2.1.2",
     "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
-    "react-dom": "^15.4.1",
-    "react": "^15.4.1",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-router": "^3.0.0",
     "react-select": "^1.0.0-rc.2",
     "uikit": "^2.27.2",
-    "underscore": "^1.8.3",
-    "classnames": "^2.2.5"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
@@ -39,7 +39,7 @@
     "url": "git+https://github.com/MakersOfSweden/MakerAdmin-Frontend.git"
   },
   "author": "",
-  "license": "GPL-3.0-or-later",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/MakersOfSweden/MakerAdmin-Frontend/issues"
   },
