--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,9 @@
     "json-loader": "^0.5.4",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
-    "react-router": "^3.0.0",
-    "react-select": "^1.0.0-rc.2",
-    "uikit": "^2.27.2",
+    "react-router": "^3.2.1",
+    "react-select": "^1.3.0",
+    "uikit": "^2.27.4",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
