Cacnel button no longer nags about changed data.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,7 +57,8 @@
     },
     "globals": {
       "require": true,
-      "module": true
+        "module": true,
+        "console": true
     },
     "parser": "babel-eslint",
     "plugins": [
