--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ services:
   - docker
 
 python:
-  - 3.6
-  - 3.7
+  - "3.6"
+  - "3.7-dev"
 
 before_install:
   - sudo apt-get install -y docker-io docker-compose
