--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ python:
   - "3.7-dev"
 
 before_install:
+  - sudo apt-get update
   - sudo apt-get install -y docker-io docker-compose
   - sudo apt-get install -y npm
 
