--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ python:
   - "3.7-dev"
 
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install -y docker-io docker-compose
+  - docker --version
+  - docker-compose --version
   - sudo apt-get install -y npm
 
 install:
