Caching docker build
- Taken from:
  https://github.com/travis-ci/travis-ci/issues/5358#issuecomment-248915326

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,22 @@ python:
   - "3.7-dev"
 
 before_install:
+  # Load cached docker images
+  - if [[ -d $HOME/docker ]]; then ls $HOME/docker/*.tar.gz | xargs -I {file} sh -c "zcat {file} | docker load"; fi
   - docker --version
   - docker-compose --version
   - sudo apt-get install -y npm
 
 install:
   - make firstrun
+
+cache:
+  bundler: true
+  directories:
+    - $HOME/docker
+
+before_cache:
+  # Save tagged docker images
+  - >
+    mkdir -p $HOME/docker && docker images -a --filter='dangling=false' --format '{{.Repository}}:{{.Tag}} {{.ID}}'
+    | xargs -n 2 -t sh -c 'test -e $HOME/docker/$1.tar.gz || docker save $0 | gzip -2 > $HOME/docker/$1.tar.gz'
