Adding bats test for checking if servers start

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,17 @@ before_install:
   - docker --version
   - docker-compose --version
   - sudo apt-get install -y npm
+  # BATS for bash testing
+  - git clone https://github.com/sstephenson/bats.git
+  - export PATH="bats/bin:$PATH"
 
 install:
   - make firstrun
 
 script:
-  - make run
+  # Same as `make run`, but with -d at the end to make it exit when all have been started
+  - docker-compose up -d
+  - bats tests/bats/
 
 cache:
   bundler: true
