Change library from composer to manually installed

--- a/devel-compose.yml
+++ b/devel-compose.yml
@@ -25,7 +25,7 @@ services:
   servicebase:
     image: makeradmin/servicebase:1.0
     build:
-      context: ./servicebase
+      context: ./library
     networks:
       - makeradmin
 
@@ -40,12 +40,12 @@ services:
     image: makeradmin/apigateway:1.0
     build:
       context: ./apigateway
-      dockerfile: ${PWD}/servicebase/DockerfileService
+      dockerfile: ${PWD}/library/DockerfileService
     volumes:
       - ./logs/apigateway:/var/www/html/storage/logs
       - ./apigateway/lumen/routes:/var/www/html/routes
       - ./apigateway/lumen/app:/var/www/html/app
-      - ./library/src:/var/www/html/vendor/makeradmin/makeradmin-library/src
+      - ./library/src/Makeradmin:/var/www/html/library
     depends_on:
       - db2
       - servicebase
@@ -131,13 +131,13 @@ services:
     image: makeradmin/economy:1.0
     build:
       context: ./economy
-      dockerfile: ${PWD}/servicebase/DockerfileService
+      dockerfile: ${PWD}/library/DockerfileService
     volumes:
       - ./logs/economy:/var/www/html/storage/logs
       - ./data/economy-vouchers:/var/www/html/vouchers
       - ./economy/lumen/routes:/var/www/html/routes
       - ./economy/lumen/app:/var/www/html/app
-      - ./library/src:/var/www/html/vendor/makeradmin/makeradmin-library/src
+      - ./library/src/Makeradmin:/var/www/html/library
     environment:
       MYSQL_HOST: "db2:${MYSQL_PORT}"
       MYSQL_DB: "makeradmin-economy"
@@ -154,12 +154,12 @@ services:
     image: makeradmin/membership:1.0
     build:
       context: ./membership
-      dockerfile: ${PWD}/servicebase/DockerfileService
+      dockerfile: ${PWD}/library/DockerfileService
     volumes:
       - ./logs/membership:/var/www/html/storage/logs
       - ./membership/lumen/routes:/var/www/html/routes
       - ./membership/lumen/app:/var/www/html/app
-      - ./library/src:/var/www/html/vendor/makeradmin/makeradmin-library/src
+      - ./library/src/Makeradmin:/var/www/html/library
     environment:
       MYSQL_HOST: "db2:${MYSQL_PORT}"
       MYSQL_DB: "makeradmin-membership"
@@ -176,12 +176,12 @@ services:
     image: makeradmin/messages:1.0
     build:
       context: ./messages
-      dockerfile: ${PWD}/servicebase/DockerfileService
+      dockerfile: ${PWD}/library/DockerfileService
     volumes:
       - ./logs/messages:/var/www/html/storage/logs
       - ./messages/lumen/routes:/var/www/html/routes
       - ./messages/lumen/app:/var/www/html/app
-      - ./library/src:/var/www/html/vendor/makeradmin/makeradmin-library/src
+      - ./library/src/Makeradmin:/var/www/html/library
     environment:
       MYSQL_HOST: "db2:${MYSQL_PORT}"
       MYSQL_DB: "makeradmin-messages"
@@ -198,11 +198,11 @@ services:
     image: makeradmin/messages-dispatcher-email:1.0
     build:
       context: ./emaildispatcher
-      dockerfile: ${PWD}/servicebase/DockerfileService
+      dockerfile: ${PWD}/library/DockerfileService
     volumes:
       - ./emaildispatcher/lumen/routes:/var/www/html/routes
       - ./emaildispatcher/lumen/app:/var/www/html/app
-      - ./library/src:/var/www/html/vendor/makeradmin/makeradmin-library/src
+      - ./library/src/Makeradmin:/var/www/html/library
     environment:
       MYSQL_HOST: "db2:${MYSQL_PORT}"
       MYSQL_DB: "makeradmin-messages"
@@ -223,12 +223,12 @@ services:
     image: makeradmin/multiaccesssync:1.0
     build:
       context: ./multiaccesssync
-      dockerfile: ${PWD}/servicebase/DockerfileService
+      dockerfile: ${PWD}/library/DockerfileService
     volumes:
       - ./data/multiaccess-uploads:/var/www/html/storage/uploads
       - ./multiaccesssync/lumen/routes:/var/www/html/routes
       - ./multiaccesssync/lumen/app:/var/www/html/app
-      - ./library/src:/var/www/html/vendor/makeradmin/makeradmin-library/src
+      - ./library/src/Makeradmin:/var/www/html/library
     environment:
       APIGATEWAY: api-gateway
       BEARER: "${API_BEARER}"
