--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
   servicebase:
     image: makeradmin/servicebase:1.0
     build:
-      context: ./servicebase
+      context: ./library
     networks:
       - makeradmin
 
@@ -38,7 +38,7 @@ services:
     image: makeradmin/apigateway:1.0
     build:
       context: ./apigateway
-      dockerfile: ${PWD}/servicebase/DockerfileService
+      dockerfile: ${PWD}/library/DockerfileService
     volumes:
       - ./logs/apigateway:/var/www/html/storage/logs
     depends_on:
@@ -126,7 +126,7 @@ services:
     image: makeradmin/economy:1.0
     build:
       context: ./economy
-      dockerfile: ${PWD}/servicebase/DockerfileService
+      dockerfile: ${PWD}/library/DockerfileService
     volumes:
       - ./logs/economy:/var/www/html/storage/logs
       - ./data/economy-vouchers:/var/www/html/vouchers
@@ -146,7 +146,7 @@ services:
     image: makeradmin/membership:1.0
     build:
       context: ./membership
-      dockerfile: ${PWD}/servicebase/DockerfileService
+      dockerfile: ${PWD}/library/DockerfileService
     volumes:
       - ./logs/membership:/var/www/html/storage/logs
     environment:
@@ -165,7 +165,7 @@ services:
     image: makeradmin/messages:1.0
     build:
       context: ./messages
-      dockerfile: ${PWD}/servicebase/DockerfileService
+      dockerfile: ${PWD}/library/DockerfileService
     volumes:
       - ./logs/messages:/var/www/html/storage/logs
     environment:
@@ -184,7 +184,7 @@ services:
     image: makeradmin/messages-dispatcher-email:1.0
     build:
       context: ./emaildispatcher
-      dockerfile: ${PWD}/servicebase/DockerfileService
+      dockerfile: ${PWD}/library/DockerfileService
     environment:
       MYSQL_HOST: "db2:${MYSQL_PORT}"
       MYSQL_DB: "makeradmin-messages"
@@ -205,7 +205,7 @@ services:
     image: makeradmin/multiaccesssync:1.0
     build:
       context: ./multiaccesssync
-      dockerfile: ${PWD}/servicebase/DockerfileService
+      dockerfile: ${PWD}/library/DockerfileService
     volumes:
       - ./data/multiaccess-uploads:/var/www/html/storage/uploads
     environment:
