--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,17 @@ services:
     image: makeradmin/servicebase:1.0
     build:
       context: ./library
+      dockerfile: DockerfileServiceBase
+    networks:
+      - makeradmin
+
+  library:
+    image: makeradmin/library:1.0
+    build:
+      context: ./library
+      dockerfile: Dockerfile
+    depends_on:
+      - servicebase
     networks:
       - makeradmin
 
