--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "history": "^4.7.2",
     "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
+    "prop-types": "^15.6.2",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-router": "^3.2.1",
