--- a/frontend/package.json
+++ b/frontend/package.json
@@ -112,7 +112,8 @@
       "consistent-return": "error",
       "block-scoped-var": "error",
       "semi": "error",
-      "react/prop-types": "off"
+      "react/prop-types": "off",
+      "react/display-name": "off"
     }
   }
 }
