--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,16 +17,18 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "babel-core": "^6.9.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^8.2.6",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.11.1",
-    "eslint": "^5.3.0",
-    "eslint-plugin-react": "^7.10.0",
-    "webpack": "^4",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "babel-loader": "^8.0.2",
+    "eslint": "^5.6.0",
+    "eslint-plugin-react": "^7.11.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.9",
+    "webpack-merge": "^4.1.4"
   },
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server",
@@ -44,8 +46,8 @@
   "homepage": "https://github.com/MakersOfSweden/MakerAdmin-Frontend#readme",
   "babel": {
     "presets": [
-      "env",
-      "react"
+      "@babel/preset-env",
+      "@babel/preset-react"
     ]
   },
   "eslintConfig": {
