--- a/frontend/DockerfileBase
+++ b/frontend/DockerfileBase
@@ -1,5 +1,8 @@
 FROM node:8-alpine
 
+RUN apk add --no-cache tzdata
+ENV TZ Europe/Stockholm
+
 RUN mkdir -p /data/src && mkdir -p /data/dist/js
 
 # Copy package file first, to avoid having to install dependencies every time a source file is updated
