--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,11 @@
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.2",
     "enzyme": "^3.6.0",
+    "enzyme-adapter-react-15": "^1.1.0",
     "eslint": "^5.6.0",
     "eslint-plugin-react": "^7.11.1",
     "jest": "^23.5.0",
+    "react-test-renderer": "^15.6.2",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.20.2",
     "webpack-bundle-analyzer": "^3.0.2",
@@ -55,6 +57,11 @@
     "presets": [
       "@babel/preset-env",
       "@babel/preset-react"
+    ]
+  },
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/jestSetup.js"
     ]
   },
   "eslintConfig": {
