--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "json-loader": "^0.5.4",
     "prop-types": "^15.6.2",
     "react": "^15.6.2",
+    "react-day-picker": "^7.2.4",
     "react-dom": "^15.6.2",
     "react-router": "^3.2.1",
     "react-select": "^2.0.0",
@@ -25,12 +26,14 @@
     "babel-eslint": "^8.2.6",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.2",
+    "css-loader": "^1.0.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-15": "^1.1.0",
     "eslint": "^5.6.0",
     "eslint-plugin-react": "^7.11.1",
     "jest": "^23.5.0",
     "react-test-renderer": "^15.6.2",
+    "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.20.2",
     "webpack-bundle-analyzer": "^3.0.2",
