#18 Trying to fix travis fails.

--- a/frontend/DockerfileTest
+++ b/frontend/DockerfileTest
@@ -1,7 +1,5 @@
 FROM makeradmin/frontend-base:1.0
 
-WORKDIR /data
+RUN npm --prefix /data run eslint
 
-RUN npm run eslint
-
-RUN npm run test
+RUN npm --prefix /data run test
