--- a/frontend/package.json
+++ b/frontend/package.json
@@ -128,6 +128,7 @@
       "no-else-return": "error",
       "consistent-return": "error",
       "block-scoped-var": "error",
+      "no-constant-condition": "off",
       "semi": "error",
       "react/prop-types": "off",
       "react/display-name": "off"
