Fixed some containers not being able to connect to the database, added table prefixes for python containers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,8 +70,9 @@ services:
     image: makeradmin/current-member:1.0
     build: member_view
     environment:
+      TABLE_PREFIX: "current_member"
       MYSQL_HOST: "db2:${MYSQL_PORT}"
-      MYSQL_DB: "makeradmin-membership"
+      MYSQL_DB: "makeradmin"
       MYSQL_USER: "${MYSQL_USER}"
       MYSQL_PASS: "${MYSQL_PASS}"
       APIGATEWAY: "api-gateway"
@@ -94,8 +95,9 @@ services:
       - "./webshop_product_images:/var/www/service/static/product_images"
     build: webshop
     environment:
+      TABLE_PREFIX: "webshop"
       MYSQL_HOST: "db2:${MYSQL_PORT}"
-      MYSQL_DB: "makeradmin-webshop"
+      MYSQL_DB: "makeradmin"
       MYSQL_USER: "${MYSQL_USER}"
       MYSQL_PASS: "${MYSQL_PASS}"
       APIGATEWAY: "api-gateway"
