Deleted member-view in react frontend

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,7 +6,7 @@ ENV TZ Europe/Stockholm
 RUN mkdir -p /data/src && mkdir -p /data/dist/js
 
 # Copy package file first, to avoid having to install dependencies every time a source file is updated
-COPY ./webpack.config.js ./member.webpack.config.js ./package.json ./package-lock.json /data/
+COPY ./webpack.config.js ./package.json ./package-lock.json /data/
 
 WORKDIR /data
 
@@ -20,7 +20,6 @@ RUN npm run eslint
 RUN npm run test
 
 RUN /data/node_modules/.bin/webpack --config /data/webpack.config.js
-RUN /data/node_modules/.bin/webpack --config /data/member.webpack.config.js
 
 FROM nginx:alpine
 
