--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -49,6 +49,17 @@ services:
       - ./multiaccesssync/lumen/app:/var/www/html/app
       - ./library/src/Makeradmin:/var/www/html/library
 
+  webshop:
+    volumes:
+      - "./webshop/src/ts:/var/www/service/ts"
+      - "./webshop/src/scss:/var/www/service/scss"
+      - "./webshop/src/templates:/var/www/service/templates"
+      - "./webshop_product_images:/var/www/service/static/product_images"
+      - "./webshop/src/frontend.py:/var/www/service/frontend.py"
+      - "./webshop/src/app.py:/var/www/service/app.py"
+      - "./webshop/src/member.py:/var/www/service/member.py"
+      - "./servicebase_python/service.py:/var/www/service/service.py"
+      - "./servicebase_python/migrate.py:/var/www/service/migrate.py"
     
   frontend:
     ports:
