--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,6 +18,10 @@ services:
   current-member:
     environment:
       APP_DEBUG: "true"
+    volumes:
+      - ./member_view/src/main.py:/var/www/service/main.py
+      - ./servicebase_python/service.py:/var/www/service/service.py
+      - ./servicebase_python/migrate.py:/var/www/service/migrate.py
 
   membership:
     volumes:
@@ -48,16 +52,21 @@ services:
     ports:
       - "8011:80"
     volumes:
-      - "./webshop/src/ts:/var/www/service/ts"
-      - "./webshop/src/scss:/var/www/service/scss"
-      - "./webshop/src/templates:/var/www/service/templates"
-      - "./webshop_product_images:/var/www/service/static/product_images"
-      - "./webshop/src/frontend.py:/var/www/service/frontend.py"
-      - "./webshop/src/app.py:/var/www/service/app.py"
-      - "./webshop/src/member.py:/var/www/service/member.py"
-      - "./servicebase_python/service.py:/var/www/service/service.py"
-      - "./servicebase_python/migrate.py:/var/www/service/migrate.py"
+      - ./webshop/src/ts:/var/www/service/ts
+      - ./webshop/src/scss:/var/www/service/scss
+      - ./webshop/src/templates:/var/www/service/templates
+      - ./webshop_product_images:/var/www/service/static/product_images
+      - ./webshop/src/frontend.py:/var/www/service/frontend.py
+      - ./webshop/src/app.py:/var/www/service/app.py
+      - ./webshop/src/member.py:/var/www/service/member.py
+      - ./webshop/src/backend.py:/var/www/service/backend.py
+      - ./servicebase_python/service.py:/var/www/service/service.py
+      - ./servicebase_python/migrate.py:/var/www/service/migrate.py
+    environment:
+      APP_DEBUG: "true"
     
   frontend:
     ports:
       - "8009:80"
+    environment:
+      APP_DEBUG: "true"
