Added dependency on backend.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -193,6 +193,8 @@ services:
     build: ./frontend
     environment:
       HOST_BACKEND:
+    depends_on:
+      - webshop
     networks:
       - makeradmin
 
