--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,7 +92,7 @@ services:
       - "./webshop/src/ts:/var/www/service/ts"
       - "./webshop/src/scss:/var/www/service/scss"
       - "./webshop/src/templates:/var/www/service/templates"
-      - "./webshop_product_images:/var/www/service/static/product_images"
+      - "./.webshop_product_images:/var/www/service/static/product_images"
     build: webshop
     environment:
       TABLE_PREFIX: "webshop"
