--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       - makeradmin
 
   servicebase_python:
-    image: makeradmin/servicebase_python:1.0
+    image: makeradmins/ervicebase_python:1.0
     build:
       context: ./servicebase_python
     networks:
@@ -114,10 +114,32 @@ services:
     networks:
       - makeradmin
 
+  backend:
+    image: makeradmin/backend:1.0
+    build: backend
+    environment:
+      TABLE_PREFIX: "webshop"
+      MYSQL_HOST: "db2:${MYSQL_PORT}"
+      MYSQL_DB: "makeradmin"
+      MYSQL_USER: "${MYSQL_USER}"
+      MYSQL_PASS: "${MYSQL_PASS}"
+      APIGATEWAY: "api-gateway"
+      BEARER: "${API_BEARER}"
+      HOST_FRONTEND:
+      HOST_BACKEND:
+      APP_DEBUG:
+      STRIPE_PRIVATE_KEY:
+      STRIPE_PUBLIC_KEY:
+      STRIPE_SIGNING_SECRET:
+    depends_on:
+      - api-gateway
+    networks:
+      - makeradmin
+      
   public:
     image: makeradmin/public:1.0
     volumes:
-      - "./.webshop_product_images:/var/www/service/static/product_images"
+      - "./.webshop_product_images:/work/static/product_images"
     build: public
     environment:
       APIGATEWAY: "api-gateway"
