#31 Added basic test.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ install:
 script:
   # Same as `make run`, but with -d at the end to make it exit when all have been started
   - docker-compose up -d
-  - bats tests/bats/
+  - bats test/bats/
   - make test
