--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ jobs:
         - make -C multiaccess-program/ coverage
         #- coveralls
       env:
-        COMMENT: "multiaccess-program: tests"
+        PROJECT: "multiaccess-program"
+        PURPOSE: "test+coverage"
 
     # Multiaccess-program make dist
     - install:
@@ -29,7 +30,8 @@ jobs:
       services:
         - docker
       env:
-        COMMENT: "multiaccess-program: build executable"
+        PROJECT: "multiaccess-program"
+        PURPOSE: "build executable"
 
     # Makeradmin database
     - before_install:
@@ -51,5 +53,6 @@ jobs:
       services:
         - docker
       env:
-        COMMENT: "makeradmin: build docker containers"
+        PROJECT: "makeradmin"
+        PURPOSE: "build docker containers"
 
