--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -43,5 +43,8 @@ services:
       - api-gateway
       - selenium
     environment:
-      - WEBDRIVER_TYPE=REMOTE_CHROME
-      - TEST_MODE=DOCKER
+      WEBDRIVER_TYPE: "REMOTE_CHROME"
+      TEST_MODE: "DOCKER"
+      API_BEARER: "${API_BEARER}"
+      HOST_BACKEND: "http://api-gateway:80"
+      
