--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -49,4 +49,5 @@ services:
       HOST_BACKEND: "http://api-gateway:80"
       STRIPE_PRIVATE_KEY: "${STRIPE_PRIVATE_KEY}"
       STRIPE_PUBLIC_KEY: "${STRIPE_PUBLIC_KEY}"
+      SELENIUM_TIMEOUT: "${SELENIUM_TIMEOUT}"
 
