#31 Skipping selenium tests in travis for now.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -50,4 +50,5 @@ services:
       STRIPE_PRIVATE_KEY: "${STRIPE_PRIVATE_KEY}"
       STRIPE_PUBLIC_KEY: "${STRIPE_PUBLIC_KEY}"
       SELENIUM_TIMEOUT: "${SELENIUM_TIMEOUT}"
+      SKIP_SELENIUM_TESTS: "${SKIP_SELENIUM_TESTS}"
 
